# h4-polytopic-attention

./: .gitignore  ARC_RESULTS.md  OLYMPUS_CONTINUOUS_LEARNING.md  OLYMPUS_STATE.md  PROJECT_OLYMPUS.md  README.md  RESULTS.md  SESSION_HANDOFF.md  arc_final.py  benchmark_v2.py  benchmark_v4.py  diagnose_zero_games.py  diagnose_zero_results.json  h4_program.md  results.tsv  run_stuck_games_v4.py  save_solutions.py  setup_and_run.sh  setup_transformer_vm.sh  solve_234bbc79.py  solve_3631a71a.py  solve_arc.py  solve_arc10.py  solve_arc11.py  solve_arc1_recovery.py  solve_arc2.py  solve_arc2_eval0.py  solve_arc2_eval1.py  solve_arc2_eval2.py  solve_arc2_eval3.py  solve_arc2_retry0.py  solve_arc2_retry1.py  solve_arc2_retry2.py  solve_arc2_retry3.py  solve_arc2_train_aa.py  solve_arc2_train_ab.py  solve_arc2_train_ac.py  solve_arc2_train_ad.py  solve_arc2_train_ae.py  solve_arc2_train_af.py  (+38 more)
.devcontainer/: devcontainer.json
agent_zero/: README.md  __init__.py  arc2_solvers_a.py  arc2_solvers_b.py  arc2_solvers_c.py  arc2_solvers_d.py  arc2_solvers_e.py  arc2_solvers_g.py  arc_bridge.py  arc_custom_solvers.py  arc_custom_solvers_b.py  baseline.py  benchmark.py  code_synthesis.py  core.py  env_interface.py  environments.py  evaluator.py  handoff.py  llm_reasoner.py  memory.py  reasoner.py  skills.py  sprint_contract.py
cge/: ARCHITECTURE.md  README.md  __init__.py  agent.py  agent_best.py  agent_breakthrough.py  agent_v2.py  agent_v3.py  (+7 more)
rust/: Cargo.toml
rust/src/: attention.rs  chamber_tree.rs  e8_lattice.rs  h4.rs  lattice_memory.rs  lib.rs  main.rs  vec4.rs  vec8.rs
(+327 files in other folders)
